--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,27 +1,46 @@
+/* Elijah Gott */
+/* Styles for main component of page */
+
 *{
     --bg-color: rgb(18, 18, 18);
+    --text-color: rgb(249, 249, 249);
+    --subtitle-text-color: rgb(175, 175, 175);
+
+    --btn-color: rgb(55, 55, 55);
+    --btn-highlight-color: rgb(65, 65, 65);
+
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 
     margin: 0;
     padding: 0;
 }
 
-.main{
-    border: 2px solid red;
-    background-color: var(--bg-color);
-    padding-left: 16px;
-    padding-right: 16px;;
+html{
+    background-color: black;
 }
 
-.homeButtons, .recentButtons, .yourShows, .madeFor{
+.main{
+    margin: 8px auto;
+    margin-left: 4px;
+    margin-right: 4px; 
+    border-radius: 8px;
+    background-color: var(--bg-color);
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.homeButtons{
     margin-top: 16px;
     margin-bottom: 16px;
+    margin-left: 0.5%;
 }
 
 .homeButtons button{
-    background-color: rgb(55, 55, 55);
-    color: white;
+    background-color: var(--btn-color);
+    color: var(--text-color);
     font-size: 16px;
+    font-weight: bold;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 12px;
@@ -32,23 +51,45 @@
 }
 
 .homeButtons button.active{
-    background-color: white;
+    background-color: var(--text-color);
     color: var(--bg-color)
 }
 
 .homeButtons button:not(.active):hover{
-    background-color: rgb(65, 65, 65);
+    background-color: var(--btn-highlight-color);
+}
+
+.title{
+    margin-left: 1%;
+    margin-bottom: -12px;
+    font-size: 24px;
+}
+
+.subtitle{
+    margin-left: 1%;
+    font-size: 12px;
+    color: var(--subtitle-text-color);
+}
+
+.section{
+    margin-bottom: 40px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .recentButtons{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    margin-left: 1%;
+    margin-right: 1%;
+    display: flex;
+    flex-wrap: wrap;
     gap: 8px;
+    justify-content: center;
 }
 
 .recentButtons button{
-    width: 15%;
-    min-width: 240px;
+    display: flex;
+    align-items: center;
+    flex: 1 0 21%;
     height: 64px;
     font-size: 20px;
     font-weight: bold;
@@ -58,7 +99,18 @@
 }
 
 .recentButtons button:hover{
-    background-color: rgb(65, 65, 65);
+    background-color: var(--btn-highlight-color);
+}
+
+.recentButtons img{
+    width: auto;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+}
+
+.recentButtons .btn-title{
+    margin-left: 8px;
+    text-align: left;
 }
 
 .yourShows, .madeFor{
@@ -66,13 +118,43 @@
 }
 
 .yourShows button, .madeFor button{
+    display: flex;
+    flex-direction: column;
     width: 180px;
-    height: 256px;
+    height: fit-content;
     background-color: var(--bg-color);
     border: none;
     border-radius: 4px;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .yourShows button:hover, .madeFor button:hover{
     background-color: rgb(55, 55, 55);
+}
+
+.yourShows img, .madeFor img{
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.yourShows a:hover, .madeFor a:hover{
+    text-decoration: underline;
+}
+
+.yourShows .btn-title, .madeFor .btn-title{
+    margin-top: 12px;
+    text-align: left;
+    font-weight: bold;
+}
+
+.yourShows .btn-subtitle, .madeFor .btn-subtitle{
+    margin-top: 8px;
+    font-size: 14px;
+    text-align: left;
+    color: rgb(175, 175, 175);
 }
