--- a/src/app/_components/LibraryMenu.module.css
+++ b/src/app/_components/LibraryMenu.module.css
@@ -8,6 +8,8 @@
 .categories{
     display: flex;
     flex-wrap: nowrap;
+    overflow: hidden;
+    margin-left: -8px;
 }
 
 .searchButton{
@@ -46,6 +48,7 @@
     background: rgb(18, 18, 18);
     border: none;
     border-radius: 8px;
+    margin-left: -8px;
 }
 
 .libraryButton:hover{
