--- a/src/app/global.css
+++ b/src/app/global.css
@@ -24,7 +24,7 @@
     padding: 0;
 }
 
-html{
+body{
     background-color: black;
 }
 
@@ -92,6 +92,7 @@ button:hover{
 .recentButtons{
     margin-left: 1%;
     margin-right: 1%;
+    margin-bottom: 48px;
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
